<resources>
    <string name="app_name">Hunter\'s Club</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hunter\'s Club</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="theme_alter">Alternar tema</string>

    <string name="menu_home">Monstruos</string>
    <string name="menu_gallery">Sets</string>
    <string name="menu_slideshow">Perfil</string>
    <string name="monster_image" >Imagen de monstruo</string>
    <string name="categoria">Categoría</string>
    <string name="nombre">Nombre</string>
    <string name="monster_searcher">Buscador de monstruos</string>

    <string name="element_icon">Icono de elemento</string>
    <string name="armor_image" />
    <string name="charm_image" />
    <string name="weapon_image" />
    <string name="decoration_image" />
    <string name="todo">TODO</string>
    <string name="welcome">Bienvenido/a/e a Hunter\'s Club</string>
    <string name="user_email">Email</string>
    <string name="pwd">Contraseña</string>
    <string name="pwd_forgor">¿Olvidaste tu contraseña?</string>
    <string name="sign_up">Registrarse</string>
    <string name="log_in">Log in</string>
    <string name="name">Nombre de usuario</string>
    <string name="confirm_pwd">Confirmar contraseña</string>
    <string name="back_login">Volver a Log in</string>
    <string name="edit_profile">Personalizar perfil</string>
    <string name="logout">Cerrar sesión</string>
    <string name="profile_image" />
    <string name="resumen">Resumen</string>
    <string name="clave">Recuperación de contraseña</string>
    <string name="mail">Enviar correo</string>
    <string name="seleccionar_arma">Seleccionar Arma</string>
    <string name="seleccionar_cabeza">Seleccionar Cabeza</string>
    <string name="seleccionar_torso">Seleccionar Torso</string>
    <string name="seleccionar_brazos">Seleccionar Brazos</string>
    <string name="seleccionar_cintura">Seleccionar Cintura</string>
    <string name="seleccionar_piernas">Seleccionar Piernas</string>
    <string name="seleccionar_cigua">Seleccionar Cigua</string>
    <string name="set_name">Nombre del set</string>
    <string name="administrar_sets">Administrar sets</string>
    <string name="borrar">Borrar</string>
    <string name="salas">Salas</string>

</resources>