<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.LoginFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/backgroundlogin" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/logo_size"
        android:layout_height="@dimen/logo_size"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"/>

    <TextView
        android:id="@+id/logoSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="@dimen/text_subtitle"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <View
        android:id="@+id/view"
        android:layout_width="@dimen/container_size"
        android:layout_height="@dimen/container_size"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView2" />

    <EditText
        android:id="@+id/edUserName"
        android:layout_width="@dimen/input_width"
        android:layout_height="wrap_content"
        android:hint="@string/user_email"
        android:textColorHint="@color/black"
        app:layout_constraintTop_toTopOf="@id/view"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/edPasswd"
        android:layout_width="@dimen/input_width"
        android:layout_height="wrap_content"
        android:hint="@string/pwd"
        android:textColorHint="@color/black"
        android:inputType="textPassword"
        app:layout_constraintTop_toTopOf="@id/view"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/pwd_forgor"
        android:textSize="@dimen/text_body"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edPasswd" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin_top"
        android:layout_marginStart="@dimen/button_margin_left"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@id/view"
        app:layout_constraintStart_toStartOf="@id/view"
        app:layout_constraintEnd_toStartOf="@id/btnLogin"
        app:layout_constraintHorizontal_chainStyle="spread_inside" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin_top"
        android:layout_marginEnd="@dimen/button_margin_right"
        android:text="@string/log_in"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@id/view"
        app:layout_constraintStart_toEndOf="@id/btnRegister"
        app:layout_constraintEnd_toEndOf="@id/view" />


</androidx.constraintlayout.widget.ConstraintLayout>
