<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.RegisterFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/backgroundregister" />


    <ImageView
        android:id="@+id/logoRegister"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/registerSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="@dimen/text_subtitle"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/logoRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>


    <View
        android:id="@+id/registerCard"
        android:layout_width="300dp"
        android:layout_height="350dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_background"
        app:layout_constraintTop_toBottomOf="@id/registerSubtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <EditText
        android:id="@+id/edName"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textColorHint="@color/black"
        app:layout_constraintTop_toTopOf="@id/registerCard"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/edEmail"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:hint="@string/user_email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/black"
        app:layout_constraintTop_toTopOf="@id/registerCard"
        android:layout_marginTop="90dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/edPassword"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:hint="@string/pwd"
        android:inputType="textPassword"
        android:textColorHint="@color/black"
        app:layout_constraintTop_toTopOf="@id/registerCard"
        android:layout_marginTop="140dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/edConfirmPassword"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_pwd"
        android:inputType="textPassword"
        android:textColorHint="@color/black"
        app:layout_constraintTop_toTopOf="@id/registerCard"
        android:layout_marginTop="190dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:layout_marginTop="250dp"
        app:layout_constraintTop_toTopOf="@id/registerCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/backToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_login"
        android:textSize="@dimen/text_body"
        android:textColor="@color/white"
        android:layout_marginTop="295dp"
        app:layout_constraintTop_toTopOf="@id/registerCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
