<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.slideshow.PasswordFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/backgroundpwd" />


    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/logo_size"
        android:layout_height="@dimen/logo_size"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"/>

    <TextView
        android:id="@+id/logoSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clave"
        android:textSize="@dimen/text_subtitle"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <View
        android:id="@+id/view"
        android:layout_width="@dimen/container_size"
        android:layout_height="@dimen/container_size"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <EditText
        android:id="@+id/edUserName"
        android:layout_width="@dimen/input_width"
        android:layout_height="wrap_content"
        android:hint="@string/user_email"
        android:textColorHint="@color/black"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintStart_toStartOf="@id/view"
        app:layout_constraintEnd_toEndOf="@id/view"
        app:layout_constraintTop_toTopOf="@id/view"
        app:layout_constraintBottom_toBottomOf="@id/view"
        app:layout_constraintVertical_bias="0.3"/>

    <Button
        android:id="@+id/btnResetPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mail"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/edUserName"
        app:layout_constraintStart_toStartOf="@id/view"
        app:layout_constraintEnd_toEndOf="@id/view"/>


</androidx.constraintlayout.widget.ConstraintLayout>