<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.app.huntersclub.ui.monster.MonsterFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_monster" >

        <action
            android:id="@+id/action_nav_home_to_monsterDetailFragment"
            app:destination="@id/monsterDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.app.huntersclub.ui.sets.SetsFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_sets" >
        <action
            android:id="@+id/action_nav_gallery_to_createSetFragment"
            app:destination="@id/createSetFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.app.huntersclub.ui.profile.SplashFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_splash" >
        <action
            android:id="@+id/action_splashFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_splashFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
    </fragment>


    <fragment
        android:id="@+id/loginFragment"
        android:name="com.app.huntersclub.ui.profile.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_loginFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
        <action
            android:id="@+id/action_loginFragment_to_passwordFragment"
            app:destination="@id/passwordFragment" />
    </fragment>


    <fragment
        android:id="@+id/monsterDetailFragment"
        android:name="com.app.huntersclub.ui.monster.MonsterDetailFragment"
        android:label="@string/resumen"
        tools:layout="@layout/fragment_monster_data">

        <argument
            android:name="monsterId"
            app:argType="integer" />
        <action
            android:id="@+id/action_monsterDetailFragment_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/createSetFragment"
        android:name="com.app.huntersclub.ui.sets.CreateSetFragment"
        android:label="Nuevo set"
        tools:layout="@layout/create_set">
        <action
            android:id="@+id/action_createSetFragment_to_nav_gallery"
            app:destination="@id/nav_gallery" />
        <action
            android:id="@+id/action_createSetFragment_to_selectArmorFragment"
            app:destination="@id/selectArmorFragment" />
        <action
            android:id="@+id/action_createSetFragment_to_selectCharmFragment"
            app:destination="@id/selectCharmFragment" />
        <action
            android:id="@+id/action_createSetFragment_to_selectWeaponFragment"
            app:destination="@id/selectWeaponFragment" />
        <action
            android:id="@+id/action_createSetFragment_to_selectDecoFragment"
            app:destination="@id/selectDecoFragment" />
    </fragment>

    <fragment
        android:id="@+id/selectArmorFragment"
        android:name="com.app.huntersclub.ui.sets.SelectArmorFragment"
        android:label="Armadura"
        tools:layout="@layout/select_armor">
        <argument
            android:name="armorType"
            app:argType="string" />
        <action
            android:id="@+id/action_selectArmorFragment_to_createSetFragment"
            app:destination="@id/createSetFragment" />
    </fragment>

    <fragment
        android:id="@+id/selectCharmFragment"
        android:name="com.app.huntersclub.ui.sets.SelectCharmFragment"
        android:label="Ciguas"
        tools:layout="@layout/select_charm">
        <action
            android:id="@+id/action_selectCharmFragment_to_createSetFragment"
            app:destination="@id/createSetFragment" />
    </fragment>

    <fragment
        android:id="@+id/selectWeaponFragment"
        android:name="com.app.huntersclub.ui.sets.SelectWeaponFragment"
        android:label="Armas"
        tools:layout="@layout/select_weapon">
        <action
            android:id="@+id/action_selectWeaponFragment_to_createSetFragment"
            app:destination="@id/createSetFragment" />
    </fragment>

    <fragment
        android:id="@+id/selectDecoFragment"
        android:name="com.app.huntersclub.ui.sets.SelectDecoFragment"
        android:label="Joyas"
        tools:layout="@layout/select_decoration">

        <argument
            android:name="slotSize"
            app:argType="integer"
            android:defaultValue="1" />
        <argument
            android:name="piece"
            app:argType="string" />
        <argument
            android:name="slotIndex"
            app:argType="integer" />

        <action
            android:id="@+id/action_selectDecoFragment_to_createSetFragment"
            app:destination="@id/createSetFragment" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.app.huntersclub.ui.profile.RegisterFragment"
        android:label="Registrarse"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_registerFragment_to_nav_slideshow"
            app:destination="@id/nav_slideshow" />
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.app.huntersclub.ui.profile.ProfileFragment"
        android:label="Perfil"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_profileFragment_to_nav_slideshow"
            app:destination="@id/nav_slideshow" />
        <action
            android:id="@+id/action_profileFragment_to_profileSetsFragment"
            app:destination="@id/profileSetsFragment" />
    </fragment>

    <fragment
        android:id="@+id/passwordFragment"
        android:name="com.app.huntersclub.ui.profile.PasswordFragment"
        android:label="Gestión de contraseña"
        tools:layout="@layout/fragment_password">
        <action
            android:id="@+id/action_passwordFragment_to_nav_slideshow"
            app:destination="@id/nav_slideshow" />
    </fragment>

    <fragment
        android:id="@+id/profileSetsFragment"
        android:name="com.app.huntersclub.ui.profile.ProfileSetsFragment"
        android:label="Gestión de sets"
        tools:layout="@layout/fragment_profilesets">
        <action
            android:id="@+id/action_profileSetsFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
    </fragment>

    <fragment
        android:id="@+id/lobbyListFragment"
        android:name="com.app.huntersclub.ui.lobbies.LobbyListFragment"
        android:label="Salas"
        tools:layout="@layout/fragment_lobby_list">
        <action
            android:id="@+id/action_lobbyListFragment_to_createLobbyFragment"
            app:destination="@id/createLobbyFragment" />
        <action
            android:id="@+id/action_lobbyListFragment_to_lobbyDetailFragment"
            app:destination="@id/lobbyDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/lobbyDetailFragment"
        android:name="com.app.huntersclub.ui.lobbies.LobbyDetailFragment"
        android:label="Detalles de la sala"
        tools:layout="@layout/fragment_lobby_detail">

        <argument
            android:name="sessionId"
            app:argType="string" />
        <action
            android:id="@+id/action_lobbyDetailFragment_to_lobbyListFragment"
            app:destination="@id/lobbyListFragment" />
    </fragment>

    <fragment
        android:id="@+id/createLobbyFragment"
        android:name="com.app.huntersclub.ui.lobbies.CreateLobbyFragment"
        android:label="Crear sala"
        tools:layout="@layout/fragment_create_lobby">
        <action
            android:id="@+id/action_createLobbyFragment_to_lobbyDetailFragment"
            app:destination="@id/lobbyDetailFragment"
            app:popUpTo="@id/createLobbyFragment"
            app:popUpToInclusive="true" />
    </fragment>


</navigation>